--- a/docs/SESSION_2025_11_06.md
+++ b/docs/SESSION_2025_11_06.md
@@ -1,5 +1,7 @@
 # ARM64 User-Space Execution Progress - Session 2025-11-06
 
+> **Note**: Historical session log. Paths and line references reflect the author's environment at the time and may not match the current tree.
+
 ## Objective
 Enable ARM64 init process execution and transition to user mode (EL0).
 
