--- a/docs/SESSION_2025_11_07.md
+++ b/docs/SESSION_2025_11_07.md
@@ -1,5 +1,7 @@
 # ARM64 Debugging Session - 2025-11-07
 
+> **Note**: Historical session log. Paths and line references reflect the author's environment at the time and may not match the current tree.
+
 ## Session Summary
 
 **Date**: November 7, 2025
